fix window height and add icon

--- a/VolumeLock.csproj
+++ b/VolumeLock.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="microphone.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="microphone.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="NAudio.Core" Version="2.2.1" />
     <PackageReference Include="NAudio.Wasapi" Version="22.0.0" />
   </ItemGroup>
